--- a/services/vue/Dockerfile
+++ b/services/vue/Dockerfile
@@ -1,7 +1,4 @@
 FROM node:latest
 
 RUN yarn global add @vue/cli
-
-RUN npm install -g http-server
-
-CMD [ "http-server", "dist" ]
+RUN yarn global add @vue/cli-init
