Add entrypoint auto vue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   vue:
     build: services/vue
     container_name: vue
-    restart: always
+    command: bash -c "npm run dev"
     working_dir: /www
     volumes:
       - ./web:/www
